<resources>
    <string name="app_name">Best Pizza</string>
    <string name="choose_restaurant">Hold here for Options</string>
    <string name="tj">Tequila Jacks</string>
    <string name="soho">SoHo</string>
    <string name="douglas">Douglas Pizza</string>
    <string name="city_center">City Center Pizza</string>
    <string name="title">Best Pizza Cork</string>
    <string name="hint">Swip left to continue</string>
    <string name="topping_title">Choose Toppings</string>
    <string name="onion">onion</string>
    <string name="sweetcorn">sweetcorn</string>
    <string name="pineapple">pineapple</string>
    <string name="mushroom">mushroom</string>
    <string name="chicken">chicken</string>
    <string name="ham">ham</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="pizza_base">Pizza Type</string>
    <string name="crispy">crispy</string>
    <string name="thin">Thin</string>
    <string name="price">Price:</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city_center_pizza">City Center Pizza</string>
    <string name="pizza_size">Pizza Size</string>
    <string name="inch">12\"</string>
    <string name="set_price">10.0€</string>
    <string name="order">Order</string>
    <string name="pnum">Phone number</string>
    <string name="black_rock">Blackrock Pizza</string>
    <string name="wilton">Wilton Pizza</string>
    <string name="next">Next</string>
    <string name="order_info">Order Info</string>
    <string name="promo_code">Draw Promo Code Here</string>
    <string name="details">Order Details</string>
    <string name="shop">Shop</string>
    <string name="phone">Phone</string>
    <string name="orderType">Order Type</string>
    <string name="time">Time</string>
    <string name="price_title">Price</string>
    <string name="longText">slkfmblkslbslkdvsdfldsmf  lsdfbld blsd blsdfbsdsmb mlsbsmlmdb m;sdf; bmsdfnsd,sdvd sdbffn bdsdmdfdfm,awnefjas;b ;kb</string>
    <string name="eat">EAT</string>
    <string name="pizza">Pizza</string>
    <string-array name="options">
        <item>ASAP Delivery</item>
        <item>Delivery for later</item>
        <item>Collect</item>
    </string-array>
</resources>
