<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Toppings">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/toppingTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/topping_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/pizzaBaseTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pizza_base"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/mySeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            tools:layout_editor_absoluteY="41dp" />

        <TextView
            android:id="@+id/pizzaTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thin"
            android:textSize="20sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/hamTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ham"
                    android:textSize="20sp" />

                <ToggleButton
                    android:id="@+id/hamToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/chickenTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken"
                    android:textSize="20sp" />

                <ToggleButton
                    android:id="@+id/chickenToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/mushroomTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/mushroom" />

                <ToggleButton
                    android:id="@+id/mushroomToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/pineappleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/pineapple"/>

                <ToggleButton
                    android:id="@+id/pineappleToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/sweetcornTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/sweetcorn" />

                <ToggleButton
                    android:id="@+id/sweetcornToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/onionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/onion" />

                <ToggleButton
                    android:id="@+id/onionToggleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="ToggleButton"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textOff="@string/no"
                    android:textOn="@string/yes" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>